--- a/.classpath
+++ b/.classpath
@@ -26,5 +26,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/gs-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/gs-ui-1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/mfo051/tools/git/DENOPTIM/lib/gs-algo-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
