--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 test/functional_tests/t6/data/prev_dbRoot/F*
 test/functional_tests/t6/data/oldCheckPoint.chk
 test/functional_tests/t7/data/*.ser
+test/functional*
 build/lib/
 build/*.jar
 lib/DENOPTIM.jar
 /bin/
 src/misc/GraphListAnalysis/
 test/functional_tests/runT.sh
+.idea
+*.iml
