Refactor build system to use make
Make is now used for all Denoptim*.jar files. For the rest, you still
have to use ./build-all.sh for now.

The lib directory has been replaced with a symlink to ../lib, simplifying
the folder handling here.

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@ test/functional_tests/t6/data/prev_dbRoot/F*
 test/functional_tests/t6/data/oldCheckPoint.chk
 test/functional_tests/t7/data/*.ser
 test/functional*
-build/lib/
 build/*.jar
+build/manifest.mf
 lib/DENOPTIM.jar
 /bin/
 src/misc/GraphListAnalysis/
