--- a/.classpath
+++ b/.classpath
@@ -23,9 +23,13 @@
 	<classpathentry kind="lib" path="lib/junit-jupiter-params-5.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/vecmath.jar"/>
 	<classpathentry kind="lib" path="lib/cdk-1.4.19.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="lib/gs-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/gs-ui-1.3.jar"/>
-	<classpathentry kind="lib" path="/Users/mfo051/tools/git/DENOPTIM/lib/gs-algo-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/gs-algo-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
