Convert remaining build scripts to make
Available targets:
make lib (default) -> DENOPTIM.jar
make all -> the other jar files
make dist -> prepare dist directory
make clean -> remove all build results

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ test/functional_tests/t7/data/*.ser
 test/functional*
 build/*.jar
 build/manifest.mf
+build/lib
+build/dist
+build/images
 lib/DENOPTIM.jar
 bin/
 src/misc/GraphListAnalysis/
