--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/DENOPTIM/src"/>
+	<classpathentry kind="src" path="src/misc/RDKITFragmenter/src"/>
+	<classpathentry kind="src" path="src/misc/SerConverter/src"/>
+	<classpathentry kind="src" path="src/misc/GraphEditor/src"/>
+	<classpathentry kind="src" path="src/misc/CheckpointReader/src"/>
+	<classpathentry kind="src" path="src/misc/PrepareFitnessOutput/src"/>
+	<classpathentry kind="src" path="src/misc/PrepareMOPAC/src"/>
 	<classpathentry kind="src" path="src/misc/TestOperator/src"/>
 	<classpathentry excluding="src/" including="images/*.png" kind="src" path="src/GUI"/>
 	<classpathentry kind="src" path="src/DenoptimCG/src"/>
@@ -9,6 +15,7 @@
 	<classpathentry kind="src" path="src/FragSpaceExplorer/src"/>
 	<classpathentry kind="src" path="src/GUI/src"/>
 	<classpathentry kind="src" path="src/UpdateUID/src"/>
+	<classpathentry kind="src" path="src/misc/GraphListsHandler/src"/>
 	<classpathentry kind="lib" path="lib/apiguardian-api-1.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
