--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 test/functional_tests/t6/data/prev_dbRoot/F*
 test/functional_tests/t6/data/oldCheckPoint.chk
 test/functional_tests/t7/data/*.ser
+test/functional_tests/run_18.sh
 build/*.jar
 build/manifest.mf
 build/lib
