finalizing internal fitness provider, and adding tests - all tests OK

--- a/.classpath
+++ b/.classpath
@@ -31,5 +31,7 @@
 	<classpathentry kind="lib" path="lib/gs-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/gs-ui-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/gs-algo-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-el-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/javax.servlet-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
