Conversion of GraphENC to/from JSON string representation of graphs; initial stub of t19 (hard-coded templates)

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/DENOPTIM/src"/>
+	<classpathentry kind="src" path="src/misc/StringConverter/src"/>
 	<classpathentry kind="src" path="src/misc/RDKITFragmenter/src"/>
 	<classpathentry kind="src" path="src/misc/SerConverter/src"/>
 	<classpathentry kind="src" path="src/misc/GraphEditor/src"/>
