--- a/.classpath
+++ b/.classpath
@@ -17,6 +17,7 @@
 	<classpathentry kind="src" path="src/GUI/src"/>
 	<classpathentry kind="src" path="src/UpdateUID/src"/>
 	<classpathentry kind="src" path="src/misc/GraphListsHandler/src"/>
+	<classpathentry kind="src" path="src/misc/Isomorphism/src"/>
 	<classpathentry kind="lib" path="lib/apiguardian-api-1.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
@@ -43,5 +44,6 @@
 	<classpathentry kind="lib" path="lib/Jmol-14.31.18.jar"/>
 	<classpathentry kind="lib" path="lib/JmolLib-14.31.18.jar"/>
 	<classpathentry kind="lib" path="lib/gson-2.8.6.jar" sourcepath="/Users/marco/tools/gson-2.8.6-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jgrapht-core-1.4.0.jar" sourcepath="/Users/marco/tools/jgrapht-1.4.0"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
