--- a/.classpath
+++ b/.classpath
@@ -45,5 +45,6 @@
 	<classpathentry kind="lib" path="lib/JmolLib-14.31.18.jar"/>
 	<classpathentry kind="lib" path="lib/gson-2.8.6.jar" sourcepath="/Users/marco/tools/gson-2.8.6-sources.jar"/>
 	<classpathentry kind="lib" path="lib/jgrapht-core-1.4.0.jar" sourcepath="/Users/marco/tools/jgrapht-1.4.0"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
