--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,6 @@
 	<classpathentry kind="lib" path="lib/javax.servlet-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/Jmol-14.31.18.jar"/>
 	<classpathentry kind="lib" path="lib/JmolLib-14.31.18.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
