--- a/.classpath
+++ b/.classpath
@@ -30,11 +30,6 @@
 	<classpathentry kind="lib" path="lib/junit-jupiter-params-5.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/vecmath.jar"/>
 	<classpathentry kind="lib" path="lib/cdk-2.3.jar" sourcepath="/Users/marco/tools/cdk/cdk-cdk-2.3"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/AdoptOpenJDK-1.8">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="lib/gs-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/gs-ui-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/gs-algo-1.3.jar"/>
@@ -45,5 +40,6 @@
 	<classpathentry kind="lib" path="lib/gson-2.8.6.jar" sourcepath="/Users/marco/tools/gson-2.8.6-sources.jar"/>
 	<classpathentry kind="lib" path="lib/jgrapht-core-1.4.0.jar" sourcepath="/Users/marco/tools/jgrapht-1.4.0"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/adoptopenjdk-8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
