--- a/.classpath
+++ b/.classpath
@@ -23,7 +23,7 @@
 	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-math3-3.6.1.jar"/>
-	<classpathentry kind="lib" path="lib/jfreechart-1.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.5.0.jar" sourcepath="/Users/marco/tools/jfreechart-1.5.0"/>
 	<classpathentry kind="lib" path="lib/junit-jupiter-5.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/junit-jupiter-api-5.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/junit-jupiter-engine-5.5.2.jar"/>
