--- a/.classpath
+++ b/.classpath
@@ -40,6 +40,15 @@
 	<classpathentry kind="lib" path="lib/gson-2.8.6.jar" sourcepath="/Users/marco/tools/gson-2.8.6-sources.jar"/>
 	<classpathentry kind="lib" path="lib/jgrapht-core-1.4.0.jar" sourcepath="/Users/marco/tools/jgrapht-1.4.0"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/adoptopenjdk-8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 14.0.1 [14.0.1]">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/jung-visualization-2.1.1.jar" sourcepath="/Users/marco/Downloads/jung-visualization-2.1.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jung-graph-impl-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jung-api-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jung-algorithms-2.1.1.jar" sourcepath="/Users/marco/Downloads/jung-visualization-2.1.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/guava-19.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
