enabling retention of graph layout upon modification of the graph; adding mouse mode controls in GraphHandler; removal of redundant button for loading fragment space; adding toolbar indicator for loaded space of building blocks

--- a/.classpath
+++ b/.classpath
@@ -43,9 +43,9 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/jung-visualization-2.1.1.jar" sourcepath="/Users/marco/Downloads/jung-visualization-2.1.1-sources.jar"/>
-	<classpathentry kind="lib" path="lib/jung-graph-impl-2.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/jung-api-2.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/jung-algorithms-2.1.1.jar" sourcepath="/Users/marco/Downloads/jung-visualization-2.1.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jung-graph-impl-2.1.1.jar" sourcepath="/Users/marco/Downloads/jung-graph-impl-2.1.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jung-api-2.1.1.jar" sourcepath="/Users/marco/Downloads/jung-api-2.1.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jung-algorithms-2.1.1.jar" sourcepath="/Users/marco/Downloads/jung-algorithms-2.1.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/guava-19.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
