--- a/.classpath
+++ b/.classpath
@@ -17,6 +17,7 @@
 	<classpathentry kind="src" path="src/GUI/src"/>
 	<classpathentry kind="src" path="src/UpdateUID/src"/>
 	<classpathentry kind="src" path="src/misc/GraphListsHandler/src"/>
+	<classpathentry kind="src" path="src/misc/GraphEditor/src"/>
 	<classpathentry kind="lib" path="lib/apiguardian-api-1.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar"/>
