--- a/.classpath_w_src
+++ b/.classpath_w_src
@@ -22,31 +22,31 @@
 	<classpathentry kind="lib" path="lib/commons-cli-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-math3-3.6.1.jar"/>
-	<classpathentry kind="lib" path="lib/jfreechart-1.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.5.0.jar" sourcepath="/Users/marco/tools/jfreechart-1.5.0"/>
 	<classpathentry kind="lib" path="lib/junit-jupiter-5.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/junit-jupiter-api-5.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/junit-jupiter-engine-5.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/junit-jupiter-migrationsupport-5.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/junit-jupiter-params-5.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/vecmath.jar"/>
-	<classpathentry kind="lib" path="lib/cdk-2.3.jar"/>
+	<classpathentry kind="lib" path="lib/cdk-2.3.jar" sourcepath="/Users/marco/tools/cdk/cdk-cdk-2.3"/>
 	<classpathentry kind="lib" path="lib/commons-el-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/javax.servlet-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/Jmol-14.31.18.jar"/>
 	<classpathentry kind="lib" path="lib/JmolLib-14.31.18.jar"/>
-	<classpathentry kind="lib" path="lib/gson-2.8.6.jar"/>
-	<classpathentry kind="lib" path="lib/jgrapht-core-1.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.8.6.jar" sourcepath="/Users/marco/tools/gson-2.8.6-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jgrapht-core-1.4.0.jar" sourcepath="/Users/marco/tools/jgrapht-1.4.0"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 14.0.1 [14.0.1]">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jung-visualization-2.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/jung-graph-impl-2.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/jung-api-2.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/jung-algorithms-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jung-visualization-2.1.1.jar" sourcepath="/Users/marco/Downloads/jung-visualization-2.1.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jung-graph-impl-2.1.1.jar" sourcepath="/Users/marco/Downloads/jung-graph-impl-2.1.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jung-api-2.1.1.jar" sourcepath="/Users/marco/Downloads/jung-api-2.1.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jung-algorithms-2.1.1.jar" sourcepath="/Users/marco/Downloads/jung-algorithms-2.1.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/guava-19.0.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="/Users/marco/tools/DENOPTIM_tnk/lib/commons-io-2.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
