--- a/.classpath
+++ b/.classpath
@@ -18,6 +18,7 @@
 	<classpathentry kind="src" path="src/UpdateUID/src"/>
 	<classpathentry kind="src" path="src/misc/GraphListsHandler/src"/>
 	<classpathentry kind="src" path="src/misc/GraphEditor/src"/>
+	<classpathentry kind="src" path="src/misc/MigrateV2ToV3/src"/>
 	<classpathentry kind="lib" path="lib/apiguardian-api-1.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar"/>
