moving unit tests under conventional src/test/java

--- a/pom.xml
+++ b/pom.xml
@@ -106,35 +106,35 @@
 	    <groupId>org.junit.jupiter</groupId>
 	    <artifactId>junit-jupiter</artifactId>
 	    <version>5.5.2</version>
-	    <!--<scope>test</scope>-->
+	    <scope>test</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 	<dependency>
 	    <groupId>org.junit.jupiter</groupId>
 	    <artifactId>junit-jupiter-api</artifactId>
 	    <version>5.5.2</version>
-	    <!--<scope>test</scope>-->
+	    <scope>test</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
 	<dependency>
 	    <groupId>org.junit.jupiter</groupId>
 	    <artifactId>junit-jupiter-engine</artifactId>
 	    <version>5.5.2</version>
-	    <!--<scope>test</scope>-->
+	    <scope>test</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-migrationsupport -->
 	<dependency>
 	    <groupId>org.junit.jupiter</groupId>
 	    <artifactId>junit-jupiter-migrationsupport</artifactId>
 	    <version>5.5.2</version>
-	    <!--<scope>test</scope>-->
+	    <scope>test</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
 	<dependency>
 	    <groupId>org.junit.jupiter</groupId>
 	    <artifactId>junit-jupiter-params</artifactId>
 	    <version>5.5.2</version>
-	    <!--<scope>test</scope>-->
+	    <scope>test</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/javax.vecmath/vecmath -->
 	<dependency>
@@ -160,6 +160,11 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M3</version>
+	  </plugin>
     </plugins>
   </build>
 </project>
