--- a/pom.xml
+++ b/pom.xml
@@ -16,18 +16,18 @@
 	<dependency>
 	    <groupId>org.apiguardian</groupId>
 	    <artifactId>apiguardian-api</artifactId>
-	    <version>1.1.0</version>
+	    <version>1.1.2</version>
 	</dependency>
 	<dependency>
 	  <artifactId>cdk-bundle</artifactId>
 	  <groupId>org.openscience.cdk</groupId>
-	  <version>2.3</version>
+	  <version>2.7.1</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
   	<dependency>
   		<groupId>commons-cli</groupId>
   		<artifactId>commons-cli</artifactId>
-  		<version>1.3.1</version>
+  		<version>1.5.0</version>
   	</dependency>
 	<!-- https://mvnrepository.com/artifact/commons-el/commons-el -->
 	<dependency>
@@ -39,13 +39,13 @@
 	<dependency>
 	    <groupId>commons-io</groupId>
 	    <artifactId>commons-io</artifactId>
-	    <version>2.4</version>
+	    <version>2.11.0</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
 	<dependency>
 	    <groupId>org.apache.commons</groupId>
 	    <artifactId>commons-lang3</artifactId>
-	    <version>3.1</version>
+	    <version>3.12.0</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
 	<dependency>
@@ -57,25 +57,25 @@
 	<dependency>
 	    <groupId>com.google.code.gson</groupId>
 	    <artifactId>gson</artifactId>
-	    <version>2.8.6</version>
+	    <version>2.9.0</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
 	<dependency>
 	    <groupId>com.google.guava</groupId>
 	    <artifactId>guava</artifactId>
-	    <version>19.0</version>
+	    <version>31.0.1-jre</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
 	<dependency>
 	    <groupId>org.jfree</groupId>
 	    <artifactId>jfreechart</artifactId>
-	    <version>1.5.0</version>
+	    <version>1.5.3</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core -->
 	<dependency>
 	    <groupId>org.jgrapht</groupId>
 	    <artifactId>jgrapht-core</artifactId>
-	    <version>1.4.0</version>
+	    <version>1.5.1</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/net.sf.jung/jung-algorithms -->
 	<dependency>
@@ -105,35 +105,35 @@
 	<dependency>
 	    <groupId>org.junit.jupiter</groupId>
 	    <artifactId>junit-jupiter</artifactId>
-	    <version>5.5.2</version>
+	    <version>5.8.2</version>
 	    <scope>test</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 	<dependency>
 	    <groupId>org.junit.jupiter</groupId>
 	    <artifactId>junit-jupiter-api</artifactId>
-	    <version>5.5.2</version>
+	    <version>5.8.2</version>
 	    <scope>test</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
 	<dependency>
 	    <groupId>org.junit.jupiter</groupId>
 	    <artifactId>junit-jupiter-engine</artifactId>
-	    <version>5.5.2</version>
+	    <version>5.8.2</version>
 	    <scope>test</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-migrationsupport -->
 	<dependency>
 	    <groupId>org.junit.jupiter</groupId>
 	    <artifactId>junit-jupiter-migrationsupport</artifactId>
-	    <version>5.5.2</version>
+	    <version>5.8.2</version>
 	    <scope>test</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
 	<dependency>
 	    <groupId>org.junit.jupiter</groupId>
 	    <artifactId>junit-jupiter-params</artifactId>
-	    <version>5.5.2</version>
+	    <version>5.8.2</version>
 	    <scope>test</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/javax.vecmath/vecmath -->
@@ -152,7 +152,7 @@
 	<dependency>
 	    <groupId>javax.el</groupId>
 	    <artifactId>javax.el-api</artifactId>
-	    <version>3.0.0</version>
+	    <version>3.0.1-b06</version>
 	</dependency>
 		
 </dependencies>
