--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
 	    <version>1.1.2</version>
 	</dependency>
 	<dependency>
-	  <artifactId>cdk-bundle</artifactId>
-	  <groupId>org.openscience.cdk</groupId>
-	  <version>2.7.1</version>
+	    <artifactId>cdk-bundle</artifactId>
+	    <groupId>org.openscience.cdk</groupId>
+	    <version>2.7.1</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
   	<dependency>
@@ -154,7 +154,12 @@
 	    <artifactId>javax.el-api</artifactId>
 	    <version>3.0.1-b06</version>
 	</dependency>
-		
+	<!-- https://mvnrepository.com/artifact/de.odysseus.juel/juel-impl -->
+	<dependency>
+	    <groupId>de.odysseus.juel</groupId>
+	    <artifactId>juel-impl</artifactId>
+	    <version>2.2.7</version>
+	</dependency>
 </dependencies>
   
   <build>
