--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,6 @@
 	    <groupId>org.openscience.cdk</groupId>
 	    <version>2.7.1</version>
 	</dependency>
-	<!-- https://mvnrepository.com/artifact/commons-el/commons-el -->
-	<dependency>
-	    <groupId>commons-el</groupId>
-	    <artifactId>commons-el</artifactId>
-	    <version>1.0</version>
-	</dependency>
 	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 	<dependency>
 	    <groupId>commons-io</groupId>
@@ -130,23 +124,17 @@
 	    <artifactId>vecmath</artifactId>
 	    <version>1.5.2</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/jakarta.el/jakarta.el-api -->
 	<dependency>
-	    <groupId>javax.servlet.jsp</groupId>
-	    <artifactId>javax.servlet.jsp-api</artifactId>
-	    <version>2.3.3</version>
-	    <scope>provided</scope>
+	    <groupId>jakarta.el</groupId>
+	    <artifactId>jakarta.el-api</artifactId>
+	    <version>4.0.0</version>
 	</dependency>
-	<!-- https://mvnrepository.com/artifact/javax.el/javax.el-api -->
+	<!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.el -->
 	<dependency>
-	    <groupId>javax.el</groupId>
-	    <artifactId>javax.el-api</artifactId>
-	    <version>3.0.1-b06</version>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/de.odysseus.juel/juel-impl -->
-	<dependency>
-	    <groupId>de.odysseus.juel</groupId>
-	    <artifactId>juel-impl</artifactId>
-	    <version>2.2.7</version>
+	    <groupId>org.glassfish</groupId>
+	    <artifactId>jakarta.el</artifactId>
+	    <version>4.0.2</version>
 	</dependency>
 </dependencies>
   
