--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
   <name>DENOPTIM3</name>
   
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+	<dependency>
+	    <groupId>commons-cli</groupId>
+	    <artifactId>commons-cli</artifactId>
+	    <version>1.5.0</version>
+	</dependency>
     <!-- https://mvnrepository.com/artifact/net.sourceforge.jmol/jmol -->
 	<dependency>
 	    <groupId>net.sourceforge.jmol</groupId>
@@ -165,7 +171,7 @@
 		    <!-- MainClass in mainfest make a executable jar -->
 		    <archive>
 		      <manifest>
-	            <mainClass>denoptim.gui.GUI</mainClass>
+	            <mainClass>denoptim.main.Main</mainClass>
 		      </manifest>
 		    </archive>
 	      </configuration>
