--- a/pom.xml
+++ b/pom.xml
@@ -142,10 +142,20 @@
 	    <artifactId>jakarta.el</artifactId>
 	    <version>4.0.2</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-core</artifactId>
+	    <version>5.3.16</version>
+	</dependency>
 </dependencies>
   
   <build>
     <plugins>
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.2.0</version>
+	  </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
