--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.denoptim</groupId>
-  <artifactId>denoptim3</artifactId>
+  <artifactId>denoptim</artifactId>
   <version>3.0.0</version>
-  <name>DENOPTIM3</name>
+  <name>denoptim</name>
   
   <dependencies>
     <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
