specify UTF-8 encoding + cleanup of changelog

--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,10 @@
   <artifactId>denoptim</artifactId>
   <version>3.0.0</version>
   <name>denoptim</name>
+
+  <properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   
   <dependencies>
     <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
