--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,12 @@
 	    <artifactId>spring-core</artifactId>
 	    <version>5.3.16</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/com.github.dpaukov/combinatoricslib3 -->
+	<dependency>
+	    <groupId>com.github.dpaukov</groupId>
+	    <artifactId>combinatoricslib3</artifactId>
+	    <version>3.3.3</version>
+	</dependency>
 </dependencies>
   
   <build>
