--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,9 +11,13 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+  
+    runs-on: ${{ matrix.os }}
+      strategy:
+        fail-fast: false
+        matrix:
+          os: [ubuntu-latest, macOS-latest, windows-latest]
+          
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
