--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ test/functional_tests/t6/data/prev_dbRoot/F*
 test/functional_tests/t6/data/oldCheckPoint.chk
 test/functional_tests/t7/data/*.ser
 doc/_build
+doc/doxygen
 build/*.jar
 build/manifest.mf
 build/lib
