--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.denoptim</groupId>
   <artifactId>denoptim</artifactId>
-  <version>3.1.2</version>
+  <version>3.1.3</version>
   <name>denoptim</name>
 
   <properties>
@@ -62,6 +62,12 @@
         <groupId>org.jfree</groupId>
         <artifactId>jfreechart</artifactId>
         <version>1.5.3</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.jfree/jfreesvg -->
+    <dependency>
+        <groupId>org.jfree</groupId>
+        <artifactId>jfreesvg</artifactId>
+        <version>3.4.2</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core -->
     <dependency>
