pausing maven build and test action

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,8 +3,10 @@
 
 name: Java CI with Maven
 
-#on:
-#  push:
+on:
+  push:
+    tags:
+      - neverUseThisTag
 #    branches: [ master ]
 #  pull_request:
 #    branches: [ master ]
