--- a/.github/workflows/publish_conda.yml
+++ b/.github/workflows/publish_conda.yml
@@ -5,8 +5,8 @@ on:
     tags:
       - v*
 
-#env:
-#  ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
+env:
+  ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
 
 jobs:
   build-and-publish:
@@ -19,20 +19,18 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@master
 
-    - name: Get Miniconda
+    - name: Setup Miniconda
       uses: conda-incubator/setup-miniconda@v2
       with:
         auto-update-conda: true
         auto-activate-base: false
-
-    - name: Setup conda env
-      run: conda install -c defaults anaconda-client conda-build
+        activate-environment: anaconda-client-env
+        environment-file: ../../conda/environment.yml
 
     - name: Build package
       run: |
         conda config --set anaconda_upload no
         conda build -c conda-forge --output-folder . .
-        ls -l
 
     - name: Publish to anaconda
       run: |
