--- a/.github/workflows/publish_conda.yml
+++ b/.github/workflows/publish_conda.yml
@@ -25,7 +25,7 @@ jobs:
         auto-update-conda: true
         auto-activate-base: false
         activate-environment: anaconda-client-env
-        environment-file: ../../conda/environment.yml
+        environment-file: conda/environment.yml
 
     - name: Build package
       run: |
