--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,10 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.denoptim</groupId>
   <artifactId>denoptim</artifactId>
+
   <version>3.1.4</version>
+  <!-- WARNING: the vesion must be changes also in doc/user_manual.html-->
+
   <name>denoptim</name>
 
   <properties>
