--- a/.github/workflows/publish_conda.yml
+++ b/.github/workflows/publish_conda.yml
@@ -3,7 +3,7 @@ name: 'Publish Conda Package'
 on:
   push:
     tags:
-      - v*
+      - v[0-9]+.[0-9]+.[0-9]+
 
 env:
   ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
@@ -19,6 +19,10 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@master
 
+    - name: Get version identifier
+      id: get_version
+      run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
+
     - name: Setup Miniconda
       uses: conda-incubator/setup-miniconda@v2
       with:
@@ -31,4 +35,6 @@ jobs:
       run: |
         conda config --set anaconda_upload yes
         conda build -c conda-forge  .
+      env:
+        DENOPTIM_VERSION: ${{ steps.get_version.outputs.VERSION }}
 
