--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,20 +1,21 @@
-{% set version = "3.1.3" %}
 {% set openjdk_version = "11.0.*" %}
 
 package:
   name: denoptim
-  version: {{ version }}
+  version: {{ GIT_DESCRIBE_TAG }}
 
 source:
   path: ..
 
 build:
-  number: 13
+  number: 0
 
 requirements:
   build:
     - openjdk =={{ openjdk_version }}
     - maven
+    script_env:
+      - DENOPTIM_VERSION
   run:
     - openjdk =={{ openjdk_version }}
 
