--- a/.github/workflows/publish_conda.yml
+++ b/.github/workflows/publish_conda.yml
@@ -3,7 +3,7 @@ name: 'Publish Conda Package'
 on:
   push:
     tags:
-      - v[0-9]+.[0-9]+.[0-9]+
+      - silencedv[0-9]+.[0-9]+.[0-9]+
 
 env:
   ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
