--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,11 +5,9 @@ name: Java CI with Maven
 
 on:
   push:
-    tags:
-      - neverUseThisTag
-#    branches: [ master ]
-#  pull_request:
-#    branches: [ master ]
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
