--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.denoptim</groupId>
-  <artifactId>denoptim</artifactId>
+  <artifactId>denoptim-2</artifactId>
 
   <version>3.2.0</version>
   <!-- WARNING: the vesion must be changes also in doc/user_manual.html-->
 
-  <name>denoptim</name>
+  <name>denoptim-2</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
