--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ test/functional_tests/t6/data/oldCheckPoint.chk
 test/functional_tests/t7/data/*.ser
 doc/_build
 doc/doxygen
+doc/.DS_Store
 build/*.jar
 build/manifest.mf
 build/lib
