adjust doxygen action

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
     steps:
-    - name: documentation
+    name: documentation
       uses: mattnotmitt/doxygen-action@v1.9.4
       with:
         working-directory: 'submodule/'
