--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -6,8 +6,13 @@ on:
       - 'devel_docs'
 
 jobs:
+  documentation:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+
     steps:
-    name: documentation
       uses: mattnotmitt/doxygen-action@v1.9.4
       with:
         working-directory: 'submodule/'
