--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -13,7 +13,8 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
-      uses: mattnotmitt/doxygen-action@v1.9.4
-      with:
-        working-directory: 'submodule/'
-        doxyfile-path: 'doc/doxygen'
+      - uses: mattnotmitt/doxygen-action@v1.9.4
+        with:
+          working-directory: 'submodule/'
+          doxyfile-path: 'doc/doxygen'
+      
