--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -8,13 +8,11 @@ on:
 jobs:
   documentation:
     runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
-      - uses: mattnotmitt/doxygen-action@v1.9.4
-        with:
-          working-directory: 'submodule/'
-          doxyfile-path: 'doc/doxygen'
-      
+      - name: Doxygen Action
+        uses: mattnotmitt/doxygen-action@1.9.4
+          with:
+            working-directory: 'submodule/'
+            doxyfile-path: 'doc/doxygen'
