corrects doxygen action

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,5 +16,5 @@ jobs:
       - name: Doxygen Action
         uses: mattnotmitt/doxygen-action@1.9.4
         with:
-          working-directory: 'submodule/'
+          working-directory: 'doc/doxygen'
           doxyfile-path: 'doc/doxygen'
