--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -7,14 +7,11 @@ on:
 
 jobs:
   documentation:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: [ubuntu-latest]
 
     steps:
       - name: Doxygen Action
         uses: mattnotmitt/doxygen-action@1.9.4
         with:
-          working-directory: 'doc/doxygen'
-          doxyfile-path: 'doc/doxygen'
+          working-directory: '../../doc/doxygen'
+          doxyfile-path: './Doxyfile'
