--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Doxygen Action
         uses: mattnotmitt/doxygen-action@1.9.4
         with:
-          working-directory: '../doc/'
+          working-directory: 'doc/'
           doxyfile-path: './Doxyfile'
