--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -17,5 +17,5 @@ jobs:
       - name: Doxygen Action
         uses: mattnotmitt/doxygen-action@1.9.4
         with:
-          working-directory: doxygen
+          working-directory: ~/DENOPTIMfork/doc/doxygen
           doxyfile-path: './Doxyfile'
