attempts to correct path to doxyfile

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -17,5 +17,4 @@ jobs:
       - name: Doxygen Action
         uses: mattnotmitt/doxygen-action@1.9.4
         with:
-          working-directory: './doc'
-          doxyfile-path: './Doxyfile'
+          doxyfile-path: 'doc/doxygen'
