--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -11,7 +11,10 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@devel_docs
+        uses: actions/checkout@v3
+        with:
+          ref: devel_docs
+
       - name: Where
         run: |
           pwd
