--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -14,13 +14,17 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: devel_docs
-
-      - name: Where
-        run: |
-          pwd
-          ls
+          
       - name: Doxygen Action
         uses: mattnotmitt/doxygen-action@1.9.4
         with:
           doxyfile-path: ./Doxyfile
           working-directory: ./doc/doxygen
+      # Deploy the HTML documentation to GitHub Pages
+      - name: GH Pages Deployment
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          publish_branch: gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./doc/html/
+          force_orphan: true
