ignores .DS_Store

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -26,5 +26,5 @@ jobs:
         with:
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./doc/doxygen/html/
+          publish_dir: ./doc/doxygen/html/index.html
           force_orphan: true
