--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: devel_docs
-          
+
       - name: Doxygen Action
         uses: mattnotmitt/doxygen-action@1.9.4
         with:
@@ -26,5 +26,5 @@ jobs:
         with:
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./doc/doxygen/html/index.html
+          publish_dir: ./doc/doxygen/html/
           force_orphan: true
