--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -22,7 +22,7 @@ jobs:
           working-directory: ./doc/doxygen
 
       - name: Check broken links
-        run: \! grep -q "\.md:" doxygen_warn.log
+        run: grep "\.md:" doxygen_warn.log ; if [ $? -eq 0 ] ; then exit 1 ; fi
 
       # Deploy the HTML documentation to GitHub Pages
       - name: GH Pages Deployment
