--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -19,10 +19,10 @@ jobs:
         uses: mattnotmitt/doxygen-action@1.9.4
         with:
           doxyfile-path: ./Doxyfile
-          working-directory: ./doc/doxygen
+          working-directory: ./doc
 
       - name: Check broken links
-        run: grep "\.md:" ./doc/doxygen/doxygen_warn.log ; if [ $? -eq 0 ] ; then exit 1 ; fi
+        run: grep "\.md:" ./doc/doxygen_warn.log ; if [ $? -eq 0 ] ; then exit 1 ; fi
 
       # Deploy the HTML documentation to GitHub Pages
       - name: GH Pages Deployment
@@ -30,5 +30,5 @@ jobs:
         with:
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./doc/doxygen/html/
+          publish_dir: ./doc/html/
           force_orphan: true
