--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -22,7 +22,12 @@ jobs:
           working-directory: ./doc
 
       - name: Check broken links
-        run: grep "\.md:" ./doc/doxygen_warn.log ; if [ $? -eq 0 ] ; then exit 1 ; fi
+        run: |
+           grep "\.md:" ./doc/doxygen_warn.log 
+           if [ "$?" -eq 0 ]
+           then 
+             exit 1
+           fi
 
       # Deploy the HTML documentation to GitHub Pages
       - name: GH Pages Deployment
