--- a/licenses/resolve_missing.properties
+++ b/licenses/resolve_missing.properties
@@ -45,7 +45,6 @@
 # Please fill the missing licenses for dependencies :
 #
 #
-#Sun Sep 04 16:15:42 CEST 2022
-openchart--openchart--1.4.2=The GNU Lesser General Public License, Version 2.1
+#Sat Mar 18 11:11:42 CET 2023
 java3d--vecmath--1.3.1=GNU General Public License version 2
 org.biojava.thirdparty--forester--1.039=The GNU Lesser General Public License, Version 2.1
