--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -14,14 +14,17 @@ requirements:
   build:
     - openjdk =={{ openjdk_version }}
     - maven
+    - python
+    - python-build
+    - setuptools
   run:
     - openjdk =={{ openjdk_version }}
     - python
     - py4j
 
-test:
-  commands:
-    - denoptim -v
+#test:
+#  commands:
+#    - denoptim -v
 
 about:
   home: https://github.com/denoptim-project/DENOPTIM
