--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [osx-arm64]
+        os: [ubuntu-latest, macOS-latest, windows-latest]
           
     steps:
     - uses: actions/checkout@v3
