try nested conda recipe with soft links

--- a/.github/workflows/publish_conda_noarch.yml
+++ b/.github/workflows/publish_conda_noarch.yml
@@ -34,7 +34,7 @@ jobs:
         auto-update-conda: true
         auto-activate-base: false
         activate-environment: anaconda-client-env
-        environment-file: conda/environment.yml
+        environment-file: conda/noarch/environment.yml
 
     - name: Build package and publish
       run: |
