back to arch-spec meta.yaml

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -8,6 +8,7 @@ source:
   path: ..
 
 build:
+  #noarch: generic 
   number: 1
 
 requirements:
@@ -22,18 +23,9 @@ requirements:
     - python
     - py4j
 
-outputs:
-  - name: denoptim
-    test:
-      commands:
-        - denoptim -v
-
-  - name: denoptim      
-    build:
-      noarch: generic
-    test:
-      commands:
-        - denoptim -v
+test:
+  commands:
+    - denoptim -v
 
 about:
   home: https://github.com/denoptim-project/DENOPTIM
