--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -8,7 +8,7 @@ source:
   path: ..
 
 build:
-  noarch: generic # [win]
+  noarch: generic # [ arch=='noarch' and linux ]
   number: 1
 
 requirements:
