upgrade pkg building pipeline

--- a/.github/workflows/publish_conda.yml
+++ b/.github/workflows/publish_conda.yml
@@ -25,11 +25,11 @@ jobs:
     - name: Get version identifier
       id: get_version
       run: |
-        echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/v}
+        echo VERSION::${GITHUB_REF#refs/tags/v} >> $GITHUB_OUTPUT
         echo ${GITHUB_REF#refs/tags/v}
 
     - name: Setup Miniconda
-      uses: conda-incubator/setup-miniconda@v2
+      uses: conda-incubator/setup-miniconda@v3.1.0
       with:
         auto-update-conda: true
         auto-activate-base: false
@@ -56,11 +56,11 @@ jobs:
     - name: Get version identifier
       id: get_version
       run: |
-        echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/v}
+        echo VERSION::${GITHUB_REF#refs/tags/v} >> $GITHUB_OUTPUT
         echo ${GITHUB_REF#refs/tags/v}
 
     - name: Setup Miniconda
-      uses: conda-incubator/setup-miniconda@v2
+      uses: conda-incubator/setup-miniconda@v3.1.0
       with:
         auto-update-conda: true
         auto-activate-base: false
